--- a/styles.css
+++ b/styles.css
@@ -39,59 +39,9 @@ body {
   row-gap: 50px;
   padding: 50px 0;
 
-  .sidenav-overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99;
-    background: #212121;
-    transition: all 0.2s;
-    background: rgba(0, 0, 0, 0.3);
-  }
-  .sidenav ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  .sidenav ul li a {
-    line-height: 45px;
-    text-decoration: none;
-    color: #6e6e6e;
-    padding: 0 10px;
-    display: block;
-    margin: 5px;
-    font-family: Roboto, sans-serif;
-    border-radius: 5px;
-  }
-  .active_link {
-    background: rgba(10, 113, 209, 0.1);
-    color: #0a71d1 !important;
-    pointer-events: none;
-  }
-  .sidenav {
-    overflow-y: scroll;
-    width: 300px;
-    height: 100vh;
-    display: block;
-    position: fixed;
-    top: 0;
-    left: -300px;
-    z-index: 9999999999999999;
-    transition: left 0.2s;
-    z-index: 999;
-    background: white;
-  }
-  .sidenav ul li a i {
-    font-size: 24px;
-    position: relative;
-    bottom: -7px;
-    margin-right: 10px;
-  }
-
   #input-layout {
-    width: 60%;
+    width: 80%;
+    min-width: 250px;
     max-width: 300px;
     color: floralwhite;
     background-color: darkslategray;
@@ -105,6 +55,7 @@ body {
       margin: 0;
       padding: 0;
       margin-top: 20px;
+      font-size: 24px;
     }
 
     .enter-inputs {
@@ -113,7 +64,16 @@ body {
       row-gap: 8px;
       padding: 0 20px;
 
-      label,
+      label {
+        display: block;
+        text-align: left;
+        border-radius: 3px;
+        line-height: 1;
+        font-size: 14px;
+        padding-bottom: 3px;
+        width: 100%;
+      }
+
       input {
         display: block;
         text-align: left;
@@ -121,8 +81,12 @@ body {
         border: none;
         line-height: 1;
         font-size: 14px;
-        padding: 4px 5px;
-        width: calc(100% - 9px);
+        padding: 6px 5px;
+        width: 100%;
+
+        :hover {
+          border: 1px solid red;
+        }
       }
     }
 
@@ -133,31 +97,46 @@ body {
       column-gap: 10px;
 
       button {
-        padding: 3px;
+        padding: 8px 5px;
         width: calc(100% / 3);
+        text-transform: uppercase; /*capitalize*/
         line-height: 1;
-        padding: 5px;
         border: none;
         border-radius: 3px;
+        color: white;
+      }
+
+      button:nth-child(1) {
+        background-color: #00ab46;
+      }
+
+      button:nth-child(2) {
+        background-color: #006ffe;
+      }
+
+      button:nth-child(3) {
+        background-color: #ff4200;
       }
     }
   }
 
   #find-layout {
-    width: 60%;
+    width: 80%;
+    min-width: 150px;
     max-width: 300px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
     color: darkslategray;
-    background-color: rgb(255, 194, 113);
+    background-color: #ffe8ba;
     box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.3);
 
     h1 {
       margin: 0;
       padding: 0;
       margin-top: 20px;
+      font-size: 24px;
     }
 
     div {
@@ -166,7 +145,6 @@ body {
       row-gap: 10px;
       padding: 0 20px;
 
-      label,
       input {
         display: block;
         text-align: left;
@@ -174,18 +152,18 @@ body {
         border: none;
         line-height: 1.3;
         font-size: 14px;
-        padding: 4px 5px;
-        width: calc(100% - 9px);
+        padding: 7px 5px;
+        width: 100%;
       }
 
       button {
         width: 100%;
         line-height: 1.3;
-        padding: 5px;
+        padding: 8px 5px;
         border: none;
         border-radius: 3px;
         color: floralwhite;
-        background-color: darkslategray;
+        background-color: orange;
       }
     }
 
@@ -194,9 +172,10 @@ body {
     }
   }
 
-  #all-users-layout {
-    width: 60%;
-    max-width: 300px;
+  #users-layout {
+    width: 80%;
+    min-width: 300px;
+    max-width: 320px;
     color: darkslategray;
     background-color: floralwhite;
     box-shadow: 2px 5px 25px rgba(0, 0, 0, 0.3);
@@ -209,6 +188,7 @@ body {
       margin: 0;
       padding: 0;
       margin-top: 20px;
+      font-size: 24px;
     }
 
     table {
@@ -229,6 +209,12 @@ body {
           -webkit-line-clamp: 1;
           -webkit-box-orient: vertical;
         }
+
+        th:last-child,
+        td:last-child {
+          text-align: right;
+        }
+
         th:nth-child(2),
         td:nth-child(2) {
           width: 70%;
@@ -237,7 +223,7 @@ body {
 
       tbody {
         tr:nth-child(odd) {
-          background-color: bisque;
+          background-color: #ffe8ba;
         }
       }
     }
